--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "key": "youtrack-issues-list",
-  "version": "1.0.28",
-  "name": "Issues List",
+  "key": "youtrack-expanded-issues-list",
+  "version": "1.1.0",
+  "name": "Expanded Issues List",
   "description": "Displays a list of YouTrack issues that match a search query.",
   "applicationName": "YouTrack",
-  "author": "JetBrains",
+  "author": "dcronkite",
   "dependencies": {
     "YouTrack": ">=2019.1.51759",
     "Hub": ">3.0"
